# riscv-unified-db

./: .clang-format  .gitattributes  .gitignore  .gitmessage  .gitmodules  .mise.local.toml.example  .mise.toml  .pre-commit-config.yaml  .prettierignore  .project  .rubocop.yml  .shellcheckrc  .solargraph.yml  .sorbet-config  .tapioca-config.yml  .yardopts  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  GOLDEN_FILE_UPDATE_NEEDED.md  Gemfile  INSTRUCTION_APPENDIX_FIX.md  LICENSE  LICENSE-BSD-3-Clause-Clear.txt  MISE-IMPLEMENTATION.md  README.adoc  README.md  REUSE.toml  Rakefile  cert_flow.txt  codecov.yml  commit.bat  commit_changes.ps1  commitlint.config.js  container.def  do  docker-compose.yml  fix_instruction_appendix.sh  fix_pr902.bat  fix_vqdot_vx.ps1  fix_vqdotsu_vv.ps1  (+20 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-entrypoint.sh  onCreateCommand.sh  updateContentCommand.sh
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  data-entry.md  data-error.md
.github/workflows/: base_container_img.yml  ci.yml  container-tests.yml  container-tests.yml.clean  container.yml  deploy.yml  merge.yml  nightly.yml  pages.yml  pr_draft_policy.yml  pr_title_check.yml  python-tests.yml  regress.yaml  regress.yml  update-container-def.yml
.metadata/: .lock_info  version.ini
LICENSES/: BSD-2-Clause.txt  BSD-3-Clause-Clear.txt  CC-BY-4.0.txt  CC0-1.0.text
arch/: README.adoc  arch_schema.json
arch/certificate_class/: MC.yaml  MockCertificateClass.yaml
arch/certificate_model/: MC100-32.yaml  MC100-64.yaml  MC100.yaml  MC200-32.yaml  MC200-64.yaml  MC300-32.yaml  MC300-64.yaml  MockCertificateModel.yaml  MockCertificateModel100.yaml
arch/common/: inst_variable_types.yaml
arch/crd/: MC-1.yaml  MockCRD-1.yaml
arch/crd_family/: Microcontroller.yaml  MockCRDFamily.yaml
arch/csc_crd/: MC-1.yaml  MockCRD-1.yaml
arch/csc_crd_family/: Microcontroller.yaml
arch/csc_testplan/: mc.yaml
arch/csr/: csr_schema.json  cycle.yaml  cycleh.yaml  dcsr.yaml  dpc.yaml  fcsr.yaml  hcontext.yaml  hedeleg.yaml  hedelegh.yaml  hstateen0.yaml  (+243 more)
backends/cpp_hart_gen/: CMakeLists.txt  tasks.rake
backends/cpp_hart_gen/c/include/udb/: renode_imports.h  stop_reason.h
backends/cpp_hart_gen/cpp/include/udb/: bb_cache.hpp  bitfield.hpp  bits-yaml.hpp  bits.hpp  config_validator.hpp  cpp_exceptions.hpp  csr.hpp  defines.hpp  elf_reader.hpp  hart.hpp  inst.hpp  iss_soc_model.hpp  memory.hpp  pool_alloc.hpp  soc_model.hpp  type.hpp  types.hpp  util.hpp  version.hpp  xregister.hpp
backends/cpp_hart_gen/cpp/src/: elf_reader.cpp  hart.cpp  iss.cpp  libhart_renode.cpp  memory.cpp  version.cpp
backends/cpp_hart_gen/cpp/test/: gen_test_bits.rb  test_bits.cpp  test_bits_directed.cpp  test_bits_random_0.cpp  test_bits_random_1.cpp  test_bits_random_2.cpp  test_bits_random_3.cpp  test_bits_random_4.cpp  test_bits_random_5.cpp  test_decode.cpp  test_util.cpp  test_version.cpp
backends/cpp_hart_gen/lib/: constexpr_pass.rb  control_flow_pass.rb  csr_template_helpers.rb  decode_tree.rb  gen_cpp.rb  template_helpers.rb  type.rb  written_pass.rb
backends/cpp_hart_gen/renode/: UdbCpu.cs  udb.repl  udb.resc
backends/cpp_hart_gen/templates/: bitfield.hxx.erb  builtin_funcs.hxx.erb  csr_container.hxx.erb  csrs.cxx.erb  csrs.hxx.erb  csrs_impl.hxx.erb  db_data.cxx.erb  db_data.hxx.erb  decode.cxx.erb  enum.cxx.erb  enum.hxx.erb  func_prototypes.cxx.erb  func_prototypes.hxx.erb  hart.cxx.erb  hart.hxx.erb  hart_factory.hxx.erb  hart_impl.hxx.erb  idl_funcs.cxx.erb  idl_funcs_impl.hxx.erb  inst.hxx.erb  inst_impl.hxx.erb  libhart.h.erb  libhart_renode.h.erb  params.cxx.erb  params.hxx.erb  structs.hxx.erb  types.hxx.erb
bin_temp/: g++  node  pip  pre-commit
cfgs/: MC100-32.yaml  _.yaml  config_schema.json  config_validation.rb  example_rv64_with_overlay.yaml  mc100-32-full-example.yaml  mc100-32-riscv-tests.yaml  memmap.json  mocks.yaml  prm_demo_rv32.yaml  qc_iu.yaml  regress.yaml  rv32-riscv-tests.yaml  rv32-vector.yaml  rv32.yaml  rv32v.yaml  rv64-riscv-tests.yaml  rv64-vector.yaml  rv64.yaml  test_zacas.yaml
doc/: HOW-DO-I.adoc  ci.adoc  creating-a-new-extension.adoc  creating-a-new-instruction.adoc  data-templates.adoc  idl.adoc  mise-setup.adoc  prose-schema.adoc  prose_schema.adoc  riscv-opcodes-migration.adoc  ruby.adoc  schemas.adoc
docs/: index.html
infrastructure/: base-container-img
lib/: DB_MODEL.README.adoc  arch_def.rb  arch_gen.rb  architecture.rb  architecture.rbi  asciidoc_extensions.js  asciidoc_when_extension.js  backend_helpers.rb  base_architecture.rb  cfg_arch.rb  config.rb  deploy.sh  design.rb  idesign.rb  idl.rb  opcodes.rb  portfolio_design.rb  presence.rb  proc_cert_design.rb  resolver.rb  specification.rb  template_helpers.rb  validate.rb  version.rb  yaml_loader.rb  yaml_resolver.py
lib_csc/: asciidoc_extensions.js  cfg_arch.rb  idl.rb  portfolio_design.rb  yaml_resolver.py
opcodes_maker/: generate_instr_dict.py  instr_dict.json  sorter.py
prompts/: NEGATIVE_EXAMPLES.yaml  PROMPT_CSR.md  PROMPT_V1_BASIC.md
schemas/: arch_schema.json  cert_class_schema.json  cert_model_schema.json  config_schema.json  csr_schema.json  ext_schema.json  implemented_exts_schema.json  inst_opcode_schema.json  inst_schema.json  inst_subtype_schema.json  inst_type_schema.json  inst_var_schema.json  inst_var_type_schema.json  inst_variable_metadatas.json  json-schema-draft-07.json  manual_schema.json  manual_version_schema.json  proc_cert_class_schema.json  proc_cert_model_schema.json  profile_class_schema.json  profile_release_schema.json  profile_schema.json  schema_defs.json
scripts/: extract_spec_sections.py  extract_udb_examples.py  llm_comparison.py  llm_evaluation.py  udb_baseline.py
sorbet/: config
spec_sections/: SPEC_SECTIONS_PRIVILEGED.yaml  SPEC_SECTIONS_UNPRIVILEGED.yaml
tasks/: adoc_gen.rake  arch_gen.rake  ext_pdf_gen.rake  html_gen.rake  top.rake
tests/: README.md  container_tests.sh
tools/: format_idl.rb
udb-ls/: build.gradle
udb-vscode/: language-configuration.json  package-lock.json  package.json  tsconfig.json
(+8227 files in other folders)
